--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div>
         <p>Tifa Lockhart est l'un des personnages principaux de la Compilation Final Fantasy VII et de Final Fantasy VII<br>
             Remake. Protagoniste dans le jeu Final Fantasy VII, elle est la seule personne à avoir connu Cloud Strife<br>
-            dans son enfance. Elle a rejoint le groupe AVALANCHE afin de combattre la Shinra. Elle et Cloud partagent<br>
+            dans son enfJance. Elle a rejoint le groupe AVALANCHE afin de combattre la Shinra. Elle et Cloud partagent<br>
             le même sentiment de colère envers Séphiroth après la destruction de leur village natal par ce dernier.</p>
     </div>
 
